# axact-metric

./: Cargo.toml  LICENSE
src/: index.html  lib.rs  main.rs  pages.rs  realtime.rs
src/.cargo/: config.toml
static/: index.css  index.mjs
