[package]
name = "axact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.10", features=["macros","ws"]}
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.1"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version = "0.4.0", features=["fs"]}
